@@ -19,3 +19,9 @@ Hello |graph| graphviz world
 
 
 .. graphviz:: graph.dot
+
+.. digraph:: bar
+   :align: right
+   :caption: on right
+
+   foo -> bar
